--- a/diseño/index.html
+++ b/diseño/index.html
@@ -33,27 +33,31 @@
                     teas needs, without the complexity. Our software is tailor-made for modern digital product teams
                 </p>
             </div>
-            <div>
-                <div>
+            <div class="third-text">
                     <div>
-                        <button class="gral-btn">01</button>
-                        <h4>Track company-wide progress</h4>
+                        <div>
+                            <button class="gral-btn">01</button>
+                            <h4>Track company-wide progress</h4>
+                        </div>
                         <p class="gral-text">See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
                     </div>
                     <div>
-                        <button class="gral-btn">02</button>
-                        <h4>Advance built-in reports</h4>
+                        <div>
+                            <button class="gral-btn">02</button>
+                            <h4>Advance built-in reports</h4>
+                        </div>
                         <p class="gral-text">Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
                     </div>
                     <div>
-                        <button class="gral-btn">03</button>
-                        <h4>Everything you need in one place</h4>
+                        <div>
+                            <button class="gral-btn">03</button>
+                            <h4>Everything you need in one place</h4>
+                        </div>
                         <p class="gral-text">Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
                     </div>
-                </div>
             </div>
         </section>
-        <section>
+        <section class="second-section">
             <h1>What they´ve said</h1>
             <div>
                 <img src="src/avatar-anisha.png" alt="avatar-anisha">
