--- a/diseño/index.html
+++ b/diseño/index.html
@@ -80,10 +80,10 @@
                 <p class="gral-text">“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
             </div>
             <aside>
-                <input type="radio" name="position" class="" checked>
-                <input type="radio" name="position" class="">
-                <input type="radio" name="position" class="">
-                <input type="radio" name="position" class="">
+                <input type="radio" name="position" checked>
+                <input type="radio" name="position">
+                <input type="radio" name="position">
+                <input type="radio" name="position">
             </aside>
             <button class="gral-btn">Get Started</button>
         </section>
