--- a/diseño/index.html
+++ b/diseño/index.html
@@ -59,48 +59,55 @@
         </section>
         <section class="second-section">
             <h1>What they´ve said</h1>
-            <div>
+            <div class="slider">
+            <div id="first-slide">
                 <img src="src/avatar-anisha.png" alt="avatar-anisha">
                 <h6>Ali Bravo</h6>
                 <p class="gral-text">“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
             </div>
-            <div>
+            <div id="second-slide">
                 <img src="src/avatar-ali.png" alt="avatar-ali">
                 <h6>Ali Bravo</h6>
                 <p class="gral-text">“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
             </div>
-            <div>
+            <div id="third-slide">
                 <img src="src/avatar-richard.png" alt="avatar-richard">
                 <h6>Ali Bravo</h6>
                 <p class="gral-text">“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
             </div>
-            <div>
+            <div id="fourth-slide">
                 <img src="src/avatar-shanai.png" alt="avatar-shanai">
                 <h6>Ali Bravo</h6>
                 <p class="gral-text">“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
             </div>
+            </div>
             <aside>
-                <input type="radio" name="position" checked>
-                <input type="radio" name="position">
-                <input type="radio" name="position">
-                <input type="radio" name="position">
+                <a href="#first-slide">&nbsp
+                </a>
+                <a href="#second-slide">&nbsp
+                </a>
+                <a href="#third-slide">&nbsp
+                </a>
+                <a href="#fourth-slide">&nbsp
+                </a>
             </aside>
             <button class="gral-btn">Get Started</button>
         </section>
-        <section>
+        <section class="third-section">
             <img src="src/bg-simplify-section-mobile.svg" alt="">
-            <h1>Simplify hoy your team words today.</h1>
+            <h1>Simplify how your team works today.</h1>
             <button class="gral-btn">Get Started</button>
         </section>
     </main>
     <footer>
-        <div>
+        <div class="form-container">
             <form>
                 <input type="email" placeholder="Updates in your inbox...">
-                <input type="submit" value="GO">
+                <input type="submit" value="GO" class="gral-btn">
             </form>
         </div>
         <div>
+            <div class="list-container">
             <div>
                 <ul>
                     <li>Home</li>
@@ -116,9 +123,10 @@
                     <li>Privacy Policy</li>
                 </ul>
             </div>
+            </div>
         </div>
         <div>
-            <div>
+            <div class="icons-container">
                 <img src="src/icon-facebook.svg" alt="facebook">
                 <img src="src/icon-youtube.svg" alt="youtube">
                 <img src="src/icon-twitter.svg" alt="twitter">
