--- a/diseño/index.html
+++ b/diseño/index.html
@@ -8,7 +8,8 @@
     <title>Examen integrador final</title>
 </head>
 <body>
-    <img src="src/bg-tablet-pattern.svg">
+    <img src="src/bg-tablet-pattern.svg" class="first-cilindre">
+    <img src="src/bg-tablet-pattern.svg" class="second-cilindre">
     <header>
         <nav>
             <img src="src/logo.svg" alt="logo-manage">
@@ -106,8 +107,7 @@
                 <input type="submit" value="GO" class="gral-btn">
             </form>
         </div>
-        <div>
-            <div class="list-container">
+        <div class="list-container">
             <div>
                 <ul>
                     <li>Home</li>
@@ -123,23 +123,18 @@
                     <li>Privacy Policy</li>
                 </ul>
             </div>
-            </div>
         </div>
-        <div>
-            <div class="icons-container">
-                <img src="src/icon-facebook.svg" alt="facebook">
-                <img src="src/icon-youtube.svg" alt="youtube">
-                <img src="src/icon-twitter.svg" alt="twitter">
-                <img src="src/icon-pinterest.svg" alt="pinterest">
-                <img src="src/icon-instagram.svg" alt="instagram">
-            </div>
-            <div>
-                <img src="src/logo.svg" alt="logo-manage">
-            </div>
+        <div class="icons-container">
+            <img src="src/icon-facebook.svg" alt="facebook">
+            <img src="src/icon-youtube.svg" alt="youtube">
+            <img src="src/icon-twitter.svg" alt="twitter">
+            <img src="src/icon-pinterest.svg" alt="pinterest">
+            <img src="src/icon-instagram.svg" alt="instagram">
         </div>
-        <div>
-            <p>Copyright 2020. All Rights Reserved</p>
+        <div class="logo-container">
+            <img src="src/logo-footer.png" alt="logo-manage">
         </div>
+        <p>Copyright 2020. All Rights Reserved</p>
     </footer>
 </body>
 </html>
