--- a/diseño/index.html
+++ b/diseño/index.html
@@ -13,6 +13,14 @@
     <header>
         <nav>
             <img src="src/logo.svg" alt="logo-manage">
+            <ul>
+                <li>Pricing</li>
+                <li>Product</li>
+                <li>About Us</li>
+                <li>Careers</li>
+                <li>Community</li>
+            </ul>
+            <button class="gral-btn">Get Started</button>
             <img src="src/icon-hamburger.svg" alt="icon-hamburger">
         </nav>
     </header>
