--- a/diseño/index.html
+++ b/diseño/index.html
@@ -13,15 +13,17 @@
     <header>
         <nav>
             <img src="src/logo.svg" alt="logo-manage">
+            <input type="checkbox" id="hamburger">
+            <label for="hamburger" class="icon-hbr"><img src="src/icon-hamburger.svg" alt="icon-hamburger"></label>
+            <label for="hamburger" class="arrow">&#8594</label>
             <ul>
-                <li>Pricing</li>
-                <li>Product</li>
-                <li>About Us</li>
-                <li>Careers</li>
-                <li>Community</li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Community</a></li>
             </ul>
             <button class="gral-btn">Get Started</button>
-            <img src="src/icon-hamburger.svg" alt="icon-hamburger">
         </nav>
     </header>
     <main>
@@ -120,17 +122,17 @@
         <div class="list-container">
             <div>
                 <ul>
-                    <li>Home</li>
-                    <li>Pricing</li>
-                    <li>Products</li>
-                    <li>About Us</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">About Us</a></li>
                 </ul>
             </div>
             <div>
                 <ul>
-                    <li>Careers</li>
-                    <li>Community</li>
-                    <li>Privacy Policy</li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
